--- a/MainForm.resx
+++ b/MainForm.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="lblGuide.Text" xml:space="preserve">
+    <value>To make sure all images are sized correctly, make sure that all images have the same width/height. If there are images that are both landscape and portrait, make sure that they have identical dimensions.
+Ex: Landscape -&gt; (3000x2000).  Portrait -&gt; (2000x3000).</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
